--- a/womens.html
+++ b/womens.html
@@ -33,15 +33,15 @@
  <center>
  <a href="product1.html" style="text-decoration:none;color:grey;">
   <div class="thumbnail" style="width:395px;">
-    <p> <img src="http://lorempixel.com/200/200/" class="img-circle"style="width:30px;height:30px; float:left;"><b style="float:left;margin-top:3px; color:orange;"> &nbsp;&nbsp;Mark Concio</b><span class="glyphicon glyphicon-time" style="color:grey;float:right;margin-top:5px;" aria-hidden="true">3h &nbsp;</span>
+    <p> <img src="http://lorempixel.com/200/200/" class="img-circle"style="width:30px;height:30px; float:left;"><b style="float:left;margin-top:3px; "> &nbsp;&nbsp;Mark Concio</b><span class="glyphicon glyphicon-time" style="color:grey;float:right;margin-top:5px;" aria-hidden="true">3h &nbsp;</span>
       <div>&nbsp;</div>
       <div>&nbsp;</div>
       <img src="images/b1.jpg" style="height:300px;width:120%;">
       <div class="caption">
         <h4><b>Bags</b></h3>
-        <p style="font-size:20px;"><b>₱7750</b>
-         &nbsp; &nbsp; &nbsp;<span class="glyphicon glyphicon-heart" style="color:grey;" aria-hidden="true">35
-         <span class="glyphicon glyphicon-map-marker" style="color:grey;" aria-hidden="true">QC</p></a>
+        <p style="font-size:20px;">PHP 7750</b>
+         &nbsp; &nbsp; &nbsp;<img src="images/heart.png" class="img-circle"style="width:30px;height:30px; ">35&nbsp; &nbsp; &nbsp;
+         <img src="images/map.png" class="img-circle"style="width:25px;height:25px; ">QC</p></a>
       </div>
   </div>
 
@@ -52,15 +52,15 @@
 
  <a href="product1.html" style="text-decoration:none;color:grey;">
   <div class="thumbnail" style="width:395px; margin-top:-10px;">
-      <p> <img src="http://lorempixel.com/200/100/" class="img-circle"style="width:30px;height:30px; float:left;"><b style="float:left;margin-top:3px; color:orange;"> &nbsp;&nbsp;Eric Domagas</b><span class="glyphicon glyphicon-time" style="color:grey;float:right;margin-top:5px;" aria-hidden="true">3h &nbsp;</span>
+      <p> <img src="http://lorempixel.com/200/100/" class="img-circle"style="width:30px;height:30px; float:left;"><b style="float:left;margin-top:3px; "> &nbsp;&nbsp;Eric Domagas</b><span class="glyphicon glyphicon-time" style="color:grey;float:right;margin-top:5px;" aria-hidden="true">3h &nbsp;</span>
       <div>&nbsp;</div>
       <div>&nbsp;</div>
       <img src="images/b2.jpg" style="height:300px;width:120%;">
       <div class="caption">
         <h4><b>Watches</b></h3>
-        <p style="font-size:20px;"><b>₱1130</b>
-         &nbsp; &nbsp; &nbsp;<span class="glyphicon glyphicon-heart" style="color:grey;" aria-hidden="true">35
-         <span class="glyphicon glyphicon-map-marker" style="color:grey;" aria-hidden="true">Manila</p></a>
+        <p style="font-size:20px;">PHP 7750</b>
+         &nbsp; &nbsp; &nbsp;<img src="images/heart.png" class="img-circle"style="width:30px;height:30px; ">35&nbsp; &nbsp; &nbsp;
+         <img src="images/map.png" class="img-circle"style="width:25px;height:25px; ">QC</p></a>
       </div>
   </div>
 
@@ -69,15 +69,15 @@
 
  <a href="product1.html" style="text-decoration:none;color:grey;">
   <div class="thumbnail" style="width:395px; margin-top:-10px;">
-      <p> <img src="http://lorempixel.com/200/300/" class="img-circle"style="width:30px;height:30px; float:left;"><b style="float:left;margin-top:3px; color:orange;"> &nbsp;&nbsp;Jason castro</b><span class="glyphicon glyphicon-time" style="color:grey;float:right;margin-top:5px;" aria-hidden="true">3h &nbsp;</span>
+      <p> <img src="http://lorempixel.com/200/300/" class="img-circle"style="width:30px;height:30px; float:left;"><b style="float:left;margin-top:3px; "> &nbsp;&nbsp;Jason castro</b><span class="glyphicon glyphicon-time" style="color:grey;float:right;margin-top:5px;" aria-hidden="true">3h &nbsp;</span>
       <div>&nbsp;</div>
       <div>&nbsp;</div>
       <img src="images/b3.jpg" style="height:300px;width:120%;">
       <div class="caption">
-        <h4><b>Gucci leather bag</b></h3>
-        <p style="font-size:20px;"><b>₱4450</b>
-         &nbsp; &nbsp; &nbsp;<span class="glyphicon glyphicon-heart" style="color:grey;" aria-hidden="true">95
-         <span class="glyphicon glyphicon-map-marker" style="color:grey;" aria-hidden="true">Manila</p></a>
+        <h4><b>Leather bag</b></h3>
+        <p style="font-size:20px;">PHP 7750</b>
+         &nbsp; &nbsp; &nbsp;<img src="images/heart.png" class="img-circle"style="width:30px;height:30px; ">35&nbsp; &nbsp; &nbsp;
+         <img src="images/map.png" class="img-circle"style="width:25px;height:25px; ">QC</p></a>
       </div>
   </div>
 
@@ -86,15 +86,15 @@
 
  <a href="product1.html" style="text-decoration:none;color:grey;">
   <div class="thumbnail" style="width:395px; margin-top:-10px;">
-       <p> <img src="http://lorempixel.com/200/400/" class="img-circle"style="width:30px;height:30px; float:left;"><b style="float:left;margin-top:3px; color:orange;"> &nbsp;&nbsp;Carlo go</b><span class="glyphicon glyphicon-time" style="color:grey;float:right;margin-top:5px;" aria-hidden="true">3h &nbsp;</span>
+       <p> <img src="http://lorempixel.com/200/400/" class="img-circle"style="width:30px;height:30px; float:left;"><b style="float:left;margin-top:3px; "> &nbsp;&nbsp;Carlo go</b><span class="glyphicon glyphicon-time" style="color:grey;float:right;margin-top:5px;" aria-hidden="true">3h &nbsp;</span>
       <div>&nbsp;</div>
       <div>&nbsp;</div>
       <img src="images/b4.jpg" style="height:300px;width:120%;">
       <div class="caption">
-        <h4><b>Leather shoulder bag</b></h3>
-        <p style="font-size:20px;"><b>₱450</b>
-         &nbsp; &nbsp; &nbsp;<span class="glyphicon glyphicon-heart" style="color:grey;" aria-hidden="true">51
-         <span class="glyphicon glyphicon-map-marker" style="color:grey;" aria-hidden="true">Pasig</p></a>
+        <h4><b>Shoes</b></h3>
+        <p style="font-size:20px;">PHP 7750</b>
+         &nbsp; &nbsp; &nbsp;<img src="images/heart.png" class="img-circle"style="width:30px;height:30px; ">35&nbsp; &nbsp; &nbsp;
+         <img src="images/map.png" class="img-circle"style="width:25px;height:25px; ">QC</p></a>
       </div>
   </div>
 
@@ -103,15 +103,15 @@
 
  <a href="product1.html" style="text-decoration:none;color:grey;">
   <div class="thumbnail" style="width:395px; margin-top:-10px;">
-     <p> <img src="http://lorempixel.com/100/100/" class="img-circle"style="width:30px;height:30px; float:left;"><b style="float:left;margin-top:3px; color:orange;"> &nbsp;&nbsp;Justin Isiderio</b><span class="glyphicon glyphicon-time" style="color:grey;float:right;margin-top:5px;" aria-hidden="true">3h &nbsp;</span>
+     <p> <img src="http://lorempixel.com/100/100/" class="img-circle"style="width:30px;height:30px; float:left;"><b style="float:left;margin-top:3px; "> &nbsp;&nbsp;Justin Isiderio</b><span class="glyphicon glyphicon-time" style="color:grey;float:right;margin-top:5px;" aria-hidden="true">3h &nbsp;</span>
       <div>&nbsp;</div>
       <div>&nbsp;</div>
       <img src="images/b5.jpg" style="height:300px;width:120%;">
       <div class="caption">
-        <h4><b>Dress for girls</h3>
-        <p style="font-size:20px;"><b>₱450</b>
-         &nbsp; &nbsp; &nbsp;<span class="glyphicon glyphicon-heart" style="color:grey;" aria-hidden="true">55
-         <span class="glyphicon glyphicon-map-marker" style="color:grey;" aria-hidden="true">Manila</p></a>
+        <h4><b>Dress</b></h3>
+        <p style="font-size:20px;">PHP 2730</b>
+         &nbsp; &nbsp; &nbsp;<img src="images/heart.png" class="img-circle"style="width:30px;height:30px; ">15&nbsp; &nbsp; &nbsp;
+         <img src="images/map.png" class="img-circle"style="width:25px;height:25px; ">QC</p></a>
       </div>
   </div>
 
@@ -120,15 +120,15 @@
 
  <a href="product1.html" style="text-decoration:none;color:grey;">
   <div class="thumbnail" style="width:395px; margin-top:-10px;">
-      <p> <img src="http://lorempixel.com/300/100/" class="img-circle"style="width:30px;height:30px; float:left;"><b style="float:left;margin-top:3px; color:orange;"> &nbsp;&nbsp;Mark Zuckerberg</b><span class="glyphicon glyphicon-time" style="color:grey;float:right;margin-top:5px;" aria-hidden="true">3h &nbsp;</span>
+      <p> <img src="http://lorempixel.com/300/100/" class="img-circle"style="width:30px;height:30px; float:left;"><b style="float:left;margin-top:3px; "> &nbsp;&nbsp;Mark Zuckerberg</b><span class="glyphicon glyphicon-time" style="color:grey;float:right;margin-top:5px;" aria-hidden="true">3h &nbsp;</span>
       <div>&nbsp;</div>
       <div>&nbsp;</div>
       <img src="images/b6.jpg" style="height:300px;width:120%;">
       <div class="caption">
-        <h4><b>Tank top Dress</b></h3>
-        <p style="font-size:20px;"><b>₱450</b>
-         &nbsp; &nbsp; &nbsp;<span class="glyphicon glyphicon-heart" style="color:grey;" aria-hidden="true">55
-         <span class="glyphicon glyphicon-map-marker" style="color:grey;" aria-hidden="true">Manila</p></a>
+        <h4><b>Tank top dress</b></h3>
+        <p style="font-size:20px;">PHP 750</b>
+         &nbsp; &nbsp; &nbsp;<img src="images/heart.png" class="img-circle"style="width:30px;height:30px; ">35&nbsp; &nbsp; &nbsp;
+         <img src="images/map.png" class="img-circle"style="width:25px;height:25px; ">Makati</p></a>
       </div>
   </div>
 
@@ -136,44 +136,44 @@
 
  <a href="product1.html" style="text-decoration:none;color:grey;">
   <div class="thumbnail" style="width:395px; margin-top:-10px;">
-     <p> <img src="http://lorempixel.com/400/100/" class="img-circle"style="width:30px;height:30px; float:left;"><b style="float:left;margin-top:3px; color:orange;"> &nbsp;&nbsp;Alex castro</b><span class="glyphicon glyphicon-time" style="color:grey;float:right;margin-top:5px;" aria-hidden="true">3h &nbsp;</span>
+     <p> <img src="http://lorempixel.com/400/100/" class="img-circle"style="width:30px;height:30px; float:left;"><b style="float:left;margin-top:3px; "> &nbsp;&nbsp;Alex castro</b><span class="glyphicon glyphicon-time" style="color:grey;float:right;margin-top:5px;" aria-hidden="true">3h &nbsp;</span>
       <div>&nbsp;</div>
       <div>&nbsp;</div>
       <img src="images/b7.jpg" style="height:300px;width:120%;">
       <div class="caption">
         <h4><b>Gowns</b></h3>
-        <p style="font-size:20px;"><b>₱450</b>
-         &nbsp; &nbsp; &nbsp;<span class="glyphicon glyphicon-heart" style="color:grey;" aria-hidden="true">55
-         <span class="glyphicon glyphicon-map-marker" style="color:grey;" aria-hidden="true">Manila</p></a>
+        <p style="font-size:20px;">PHP 294</b>
+         &nbsp; &nbsp; &nbsp;<img src="images/heart.png" class="img-circle"style="width:30px;height:30px; ">35&nbsp; &nbsp; &nbsp;
+         <img src="images/map.png" class="img-circle"style="width:25px;height:25px; ">QC</p></a>
       </div>
   </div>
 
   <a href="product1.html" style="text-decoration:none;color:grey;">
   <div class="thumbnail" style="width:395px; margin-top:-10px;">
-       <p> <img src="http://lorempixel.com/500/100/" class="img-circle"style="width:30px;height:30px; float:left;"><b style="float:left;margin-top:3px; color:orange;"> &nbsp;&nbsp;Lester Carlo</b><span class="glyphicon glyphicon-time" style="color:grey;float:right;margin-top:5px;" aria-hidden="true">3h &nbsp;</span>
+       <p> <img src="http://lorempixel.com/500/100/" class="img-circle"style="width:30px;height:30px; float:left;"><b style="float:left;margin-top:3px; "> &nbsp;&nbsp;Lester Carlo</b><span class="glyphicon glyphicon-time" style="color:grey;float:right;margin-top:5px;" aria-hidden="true">3h &nbsp;</span>
       <div>&nbsp;</div>
       <div>&nbsp;</div>
       <img src="images/b8.jpg" style="height:300px;width:120%;">
       <div class="caption">
-        <h4><b>Glamour shirts</b></h3>
-        <p style="font-size:20px;"><b>₱450</b>
-         &nbsp; &nbsp; &nbsp;<span class="glyphicon glyphicon-heart" style="color:grey;" aria-hidden="true">55
-         <span class="glyphicon glyphicon-map-marker" style="color:grey;" aria-hidden="true">Manila</p></a>
+        <h4><b>Glamour Shirts</b></h3>
+        <p style="font-size:20px;">PHP 7750</b>
+         &nbsp; &nbsp; &nbsp;<img src="images/heart.png" class="img-circle"style="width:30px;height:30px; ">35&nbsp; &nbsp; &nbsp;
+         <img src="images/map.png" class="img-circle"style="width:25px;height:25px; ">QC</p></a>
       </div>
   </div>
 
 
    <a href="product1.html" style="text-decoration:none;color:grey;">
   <div class="thumbnail" style="width:395px; margin-top:-10px;">
-      <p> <img src="http://lorempixel.com/100/100/" class="img-circle"style="width:30px;height:30px; float:left;"><b style="float:left;margin-top:3px; color:orange;"> &nbsp;&nbsp;Denzel santos</b><span class="glyphicon glyphicon-time" style="color:grey;float:right;margin-top:5px;" aria-hidden="true">3h &nbsp;</span>
+      <p> <img src="http://lorempixel.com/100/100/" class="img-circle"style="width:30px;height:30px; float:left;"><b style="float:left;margin-top:3px; "> &nbsp;&nbsp;Denzel santos</b><span class="glyphicon glyphicon-time" style="color:grey;float:right;margin-top:5px;" aria-hidden="true">3h &nbsp;</span>
       <div>&nbsp;</div>
       <div>&nbsp;</div>
       <img src="images/b9.jpg" style="height:300px;width:120%;">
       <div class="caption">
-        <h4><b>T shirt for ladies </b></h3>
-        <p style="font-size:20px;"><b>₱450</b>
-         &nbsp; &nbsp; &nbsp;<span class="glyphicon glyphicon-heart" style="color:grey;" aria-hidden="true">55
-         <span class="glyphicon glyphicon-map-marker" style="color:grey;" aria-hidden="true">Manila</p></a>
+        <h4><b>Shirt for ladies</b></h3>
+        <p style="font-size:20px;">PHP 7750</b>
+         &nbsp; &nbsp; &nbsp;<img src="images/heart.png" class="img-circle"style="width:30px;height:30px; ">35&nbsp; &nbsp; &nbsp;
+         <img src="images/map.png" class="img-circle"style="width:25px;height:25px; ">QC</p></a>
       </div>
   </div>
 
