--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
 
 <link href="bootstrap-3.1.1-dist/css/bootstrap.css" rel="stylesheet" media="screen">
 <link href="css/topNav.css" rel="stylesheet" media="screen">
-<link href="css/khawna-styles.css" rel="stylesheet" media="screen">
+
 <script src="js/jquery.mobile.custom.min.js"></script>  
 
 
 </head>
-<body > 
+<body bgcolor="white!important;">
 
 
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
@@ -73,7 +73,7 @@
 
 
 <!-- 3 key -->
-
+<div style="bgcolor:white;">
   <a href="womens.html"><img src="images/categories/forher.jpg" style=" margin-top:40px; " class="img-responsive"></a>
    <a href="womens.html"><img src="images/categories/forhim.jpg" style=" margin-top:40px; " class="img-responsive"></a>
     <a href="womens.html"><img src="images/categories/food.jpg" style=" margin-top:40px; " class="img-responsive"></a>
