--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
 
 <!-- 3 key -->
 <div style="bgcolor:white;">
-  <a href="womens.html"><img src="images/categories/forher.jpg" style=" margin-top:40px; " class="img-responsive"></a>
-   <a href="womens.html"><img src="images/categories/forhim.jpg" style=" margin-top:40px; " class="img-responsive"></a>
-    <a href="womens.html"><img src="images/categories/food.jpg" style=" margin-top:40px; " class="img-responsive"></a>
-     <a href="womens.html"><img src="images/categories/baby.jpg" style=" margin-top:40px; " class="img-responsive"></a>
-      <a href="womens.html"><img src="images/categories/services.jpg" style=" margin-top:40px; " class="img-responsive"></a>
+  <a href="womens.html"><img src="images/forher.jpg" style=" margin-top:40px; " class="img-responsive"></a>
+   <a href="womens.html"><img src="images/forhim.jpg" style=" margin-top:40px; " class="img-responsive"></a>
+    <a href="womens.html"><img src="images/food.jpg" style=" margin-top:40px; " class="img-responsive"></a>
+     <a href="womens.html"><img src="images/baby.jpg" style=" margin-top:40px; " class="img-responsive"></a>
+      <a href="womens.html"><img src="images/services.jpg" style=" margin-top:40px; " class="img-responsive"></a>
    
 
 <div>&nbsp;</div>
