--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
 
 
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
-  <!-- Indicators -->
+  <!-- Indicators 
   <ol class="carousel-indicators">
     <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
     <li data-target="#myCarousel" data-slide-to="1"></li>
     <li data-target="#myCarousel" data-slide-to="2"></li>
   </ol>
 
-  <!-- Wrapper for slides -->
+  <!-- Wrapper for slides 
   <div class="carousel-inner" role="listbox">
     <div class="item active">
       <img src="images/sale1.jpg" style="height:200px;width:120%;">
@@ -58,7 +58,7 @@
     
   </div>
 
-  <!-- Controls -->
+  <!-- Controls 
   <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
     <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
     <span class="sr-only">Previous</span>
@@ -67,18 +67,18 @@
     <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </a>
-</div>
+</div>-->
 
 
 
 
 <!-- 3 key -->
 <div style="bgcolor:white;">
-  <a href="womens.html"><img src="images/forher.jpg" style=" margin-top:40px; " class="img-responsive"></a>
-   <a href="womens.html"><img src="images/forhim.jpg" style=" margin-top:40px; " class="img-responsive"></a>
-    <a href="womens.html"><img src="images/food.jpg" style=" margin-top:40px; " class="img-responsive"></a>
-     <a href="womens.html"><img src="images/baby.jpg" style=" margin-top:40px; " class="img-responsive"></a>
-      <a href="womens.html"><img src="images/services.jpg" style=" margin-top:40px; " class="img-responsive"></a>
+  <a href="womens.html"><img src="images/forher.jpg" style=" margin-top:15px; height:130px;" class="img-responsive"></a>
+   <a href="womens.html"><img src="images/forhim.jpg" style=" margin-top:15px;height:130px; " class="img-responsive"></a>
+    <a href="womens.html"><img src="images/food.jpg" style=" margin-top:15px; height:130px;" class="img-responsive"></a>
+     <a href="womens.html"><img src="images/baby.jpg" style=" margin-top:15px;height:130px; " class="img-responsive"></a>
+      <a href="womens.html"><img src="images/services.jpg" style=" margin-top:15px;height:130px; " class="img-responsive"></a>
    
 
 <div>&nbsp;</div>
