--- a/index.html
+++ b/index.html
@@ -3,20 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
-<title>OrangeApps | k-12 School system</title>
-<meta content="orangeapps,orange,apps,orange apps,orangeappsinc,orangeappsinc.com Orange apps, School Software, orangeapps.ph" name="keywords">
-<meta content="orangeapps is a platform for k-12 schools to manage the admission,communication and grading process simply and securely." name="description">
-<meta content="website" property="og:type">
-<meta content="http://www.orangeappsinc.com/" property="og:url">
-<meta content="OrangeApps | k-12 School system" property="og:title">
-<meta content="OrangeApps is a platform for k-12 schools to manage the admission,communication and grading process simply and securely." property="og:description">
-<meta property="og:image" content="http://www.orangeappsinc.com/images/fb.jpg" />
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="OrangeApps is a platform for k-12 schools to manage the admission,communication and grading process simply and securely.">
-<META NAME="ROBOTS" CONTENT="INDEX, FOLLOW">
-<link rel="canonical" href="http://www.orangeappsinc.com" />
-<link rel="shortcut icon" href="http://www.orangeappsinc.com/favicon.ico" type="image/x-icon" />
-<link rel="icon" href="http://www.orangeappsinc.com/favicon.ico" type="image/x-icon" />
+
 
 
 <link href="bootstrap-3.1.1-dist/css/bootstrap.css" rel="stylesheet" media="screen">
@@ -26,11 +13,11 @@
 
 
 </head>
-<body bgcolor="white!important;">
+<body >
 
-
+<!-- 
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
-  <!-- Indicators 
+  Indicators 
   <ol class="carousel-indicators">
     <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
     <li data-target="#myCarousel" data-slide-to="1"></li>
@@ -70,7 +57,9 @@
 </div>-->
 
 
-
+<div>&nbsp;</div>
+<div>&nbsp;</div>
+<div>&nbsp;</div>
 
 <!-- 3 key -->
 <div style="bgcolor:white;">
