--- a/index.html
+++ b/index.html
@@ -15,16 +15,15 @@
 </head>
 <body >
 
-<!-- 
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
-  Indicators 
+
   <ol class="carousel-indicators">
     <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
     <li data-target="#myCarousel" data-slide-to="1"></li>
     <li data-target="#myCarousel" data-slide-to="2"></li>
   </ol>
 
-  <!-- Wrapper for slides 
+ 
   <div class="carousel-inner" role="listbox">
     <div class="item active">
       <img src="images/sale1.jpg" style="height:200px;width:120%;">
@@ -45,7 +44,6 @@
     
   </div>
 
-  <!-- Controls 
   <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
     <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
     <span class="sr-only">Previous</span>
@@ -54,12 +52,9 @@
     <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </a>
-</div>-->
+</div>
 
 
-<div>&nbsp;</div>
-<div>&nbsp;</div>
-<div>&nbsp;</div>
 
 <!-- 3 key -->
 <div style="bgcolor:white;">
