--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
    <a href="womens.html"><img src="images/forhim.jpg" style=" margin-top:5px;height:120px; " class="img-responsive"></a>
     <a href="womens.html"><img src="images/food.jpg" style=" margin-top:5px; height:120px;" class="img-responsive"></a>
      <a href="womens.html"><img src="images/baby.jpg" style=" margin-top:5px;height:120px; " class="img-responsive"></a>
-      <a href="womens.html"><img src="images/services.jpg" style=" margin-top:5px;height:120px; " class="img-responsive"></a>
+      <a href="womens.html"><img src="images/ofw.jpg" style=" margin-top:5px;height:120px; " class="img-responsive"></a>
    
 
 <div>&nbsp;</div>
