--- a/womens.html
+++ b/womens.html
@@ -33,14 +33,13 @@
  <center>
  <a href="product1.html" style="text-decoration:none;color:grey;">
   <div class="thumbnail" style="width:395px;">
-    <p> <img src="http://lorempixel.com/200/200/" class="img-circle"style="width:30px;height:30px; float:left;"><b style="float:left;margin-top:3px; "> &nbsp;&nbsp;Mark Concio</b><span class="glyphicon glyphicon-time" style="color:grey;float:right;margin-top:5px;" aria-hidden="true">3h &nbsp;</span>
-      <div>&nbsp;</div>
-      <div>&nbsp;</div>
+    <p> <img src="http://lorempixel.com/200/200/" class="img-circle"style="width:30px;height:30px; float:left;"><p style="float:left;margin-top:3px; "> &nbsp;&nbsp;Mark Concio</b><span  style="color:grey;float:right;margin-top:5px; margin-left:205px;" aria-hidden="true"><p>3h</p> &nbsp;</span>
+     
       <img src="images/b1.jpg" style="height:300px;width:120%;">
       <div class="caption">
-        <h4><b>Bags</b></h3>
+        <h4>Brand New Bags</h3>
         <p style="font-size:20px;">PHP 7750</b>
-         &nbsp; &nbsp; &nbsp;<img src="images/heart.png" class="img-circle"style="width:30px;height:30px; ">35&nbsp; &nbsp; &nbsp;
+         &nbsp; &nbsp; &nbsp;<img src="images/heart.png" style="width:30px;height:30px; color:red;">15&nbsp; &nbsp; &nbsp;
          <img src="images/map.png" class="img-circle"style="width:25px;height:25px; ">QC</p></a>
       </div>
   </div>
@@ -57,9 +56,9 @@
       <div>&nbsp;</div>
       <img src="images/b2.jpg" style="height:300px;width:120%;">
       <div class="caption">
-        <h4><b>Watches</b></h3>
-        <p style="font-size:20px;">PHP 7750</b>
-         &nbsp; &nbsp; &nbsp;<img src="images/heart.png" class="img-circle"style="width:30px;height:30px; ">35&nbsp; &nbsp; &nbsp;
+        <h4>Watches</h3>
+        <p style="font-size:20px;">PHP 7320</b>
+         &nbsp; &nbsp; &nbsp;<img src="images/heart.png" style="width:30px;height:30px; color:red;">51&nbsp; &nbsp; &nbsp;
          <img src="images/map.png" class="img-circle"style="width:25px;height:25px; ">QC</p></a>
       </div>
   </div>
@@ -74,9 +73,9 @@
       <div>&nbsp;</div>
       <img src="images/b3.jpg" style="height:300px;width:120%;">
       <div class="caption">
-        <h4><b>Leather bag</b></h3>
-        <p style="font-size:20px;">PHP 7750</b>
-         &nbsp; &nbsp; &nbsp;<img src="images/heart.png" class="img-circle"style="width:30px;height:30px; ">35&nbsp; &nbsp; &nbsp;
+         <h4>Leather Bags</h3>
+        <p style="font-size:20px;">PHP 21,230</b>
+         &nbsp; &nbsp; &nbsp;<img src="images/heart.png" style="width:30px;height:30px; color:red;">25&nbsp; &nbsp; &nbsp;
          <img src="images/map.png" class="img-circle"style="width:25px;height:25px; ">QC</p></a>
       </div>
   </div>
@@ -91,10 +90,10 @@
       <div>&nbsp;</div>
       <img src="images/b4.jpg" style="height:300px;width:120%;">
       <div class="caption">
-        <h4><b>Shoes</b></h3>
-        <p style="font-size:20px;">PHP 7750</b>
-         &nbsp; &nbsp; &nbsp;<img src="images/heart.png" class="img-circle"style="width:30px;height:30px; ">35&nbsp; &nbsp; &nbsp;
-         <img src="images/map.png" class="img-circle"style="width:25px;height:25px; ">QC</p></a>
+          <h4>Charger power banks</h3>
+        <p style="font-size:20px;">PHP 1290</b>
+         &nbsp; &nbsp; &nbsp;<img src="images/heart.png" style="width:30px;height:30px; color:red;">15&nbsp; &nbsp; &nbsp;
+         <img src="images/map.png" class="img-circle"style="width:25px;height:25px; ">Makati</p></a>
       </div>
   </div>
 
@@ -108,9 +107,9 @@
       <div>&nbsp;</div>
       <img src="images/b5.jpg" style="height:300px;width:120%;">
       <div class="caption">
-        <h4><b>Dress</b></h3>
-        <p style="font-size:20px;">PHP 2730</b>
-         &nbsp; &nbsp; &nbsp;<img src="images/heart.png" class="img-circle"style="width:30px;height:30px; ">15&nbsp; &nbsp; &nbsp;
+          <h4>Dress for ladies</h3>
+        <p style="font-size:20px;">PHP 980</b>
+         &nbsp; &nbsp; &nbsp;<img src="images/heart.png" style="width:30px;height:30px; color:red;">12&nbsp; &nbsp; &nbsp;
          <img src="images/map.png" class="img-circle"style="width:25px;height:25px; ">QC</p></a>
       </div>
   </div>
@@ -125,10 +124,10 @@
       <div>&nbsp;</div>
       <img src="images/b6.jpg" style="height:300px;width:120%;">
       <div class="caption">
-        <h4><b>Tank top dress</b></h3>
-        <p style="font-size:20px;">PHP 750</b>
-         &nbsp; &nbsp; &nbsp;<img src="images/heart.png" class="img-circle"style="width:30px;height:30px; ">35&nbsp; &nbsp; &nbsp;
-         <img src="images/map.png" class="img-circle"style="width:25px;height:25px; ">Makati</p></a>
+          <h4>Tank Top Dress</h3>
+        <p style="font-size:20px;">PHP 1231</b>
+         &nbsp; &nbsp; &nbsp;<img src="images/heart.png" style="width:30px;height:30px; color:red;">11&nbsp; &nbsp; &nbsp;
+         <img src="images/map.png" class="img-circle"style="width:25px;height:25px; ">Pasig</p></a>
       </div>
   </div>
 
@@ -141,9 +140,9 @@
       <div>&nbsp;</div>
       <img src="images/b7.jpg" style="height:300px;width:120%;">
       <div class="caption">
-        <h4><b>Gowns</b></h3>
-        <p style="font-size:20px;">PHP 294</b>
-         &nbsp; &nbsp; &nbsp;<img src="images/heart.png" class="img-circle"style="width:30px;height:30px; ">35&nbsp; &nbsp; &nbsp;
+          <h4>Gowns</h3>
+        <p style="font-size:20px;">PHP 7750</b>
+         &nbsp; &nbsp; &nbsp;<img src="images/heart.png" style="width:30px;height:30px; color:red;">15&nbsp; &nbsp; &nbsp;
          <img src="images/map.png" class="img-circle"style="width:25px;height:25px; ">QC</p></a>
       </div>
   </div>
@@ -155,9 +154,9 @@
       <div>&nbsp;</div>
       <img src="images/b8.jpg" style="height:300px;width:120%;">
       <div class="caption">
-        <h4><b>Glamour Shirts</b></h3>
+          <h4>Shirts</h3>
         <p style="font-size:20px;">PHP 7750</b>
-         &nbsp; &nbsp; &nbsp;<img src="images/heart.png" class="img-circle"style="width:30px;height:30px; ">35&nbsp; &nbsp; &nbsp;
+         &nbsp; &nbsp; &nbsp;<img src="images/heart.png" style="width:30px;height:30px; color:red;">15&nbsp; &nbsp; &nbsp;
          <img src="images/map.png" class="img-circle"style="width:25px;height:25px; ">QC</p></a>
       </div>
   </div>
@@ -170,9 +169,9 @@
       <div>&nbsp;</div>
       <img src="images/b9.jpg" style="height:300px;width:120%;">
       <div class="caption">
-        <h4><b>Shirt for ladies</b></h3>
+          <h4>Ladies Clothes</h3>
         <p style="font-size:20px;">PHP 7750</b>
-         &nbsp; &nbsp; &nbsp;<img src="images/heart.png" class="img-circle"style="width:30px;height:30px; ">35&nbsp; &nbsp; &nbsp;
+         &nbsp; &nbsp; &nbsp;<img src="images/heart.png" style="width:30px;height:30px; color:red;">15&nbsp; &nbsp; &nbsp;
          <img src="images/map.png" class="img-circle"style="width:25px;height:25px; ">QC</p></a>
       </div>
   </div>
