--- a/womens.html
+++ b/womens.html
@@ -51,7 +51,7 @@
 
  <a href="product1.html" style="text-decoration:none;color:grey;">
   <div class="thumbnail" style="width:395px; margin-top:-10px;">
-      <p> <img src="http://lorempixel.com/200/100/" class="img-circle"style="width:30px;height:30px; float:left;"><b style="float:left;margin-top:3px; "> &nbsp;&nbsp;Eric Domagas</b><span class="glyphicon glyphicon-time" style="color:grey;float:right;margin-top:5px;" aria-hidden="true">3h &nbsp;</span>
+      <p> <img src="http://lorempixel.com/200/100/" class="img-circle"style="width:30px;height:30px; float:left;"><p style="float:left;margin-top:3px; "> &nbsp;&nbsp;Eric Domagas</b><span  style="color:grey;float:right;margin-top:5px; margin-left:205px;" aria-hidden="true"><p>3h</p> &nbsp;</span>
       <div>&nbsp;</div>
       <div>&nbsp;</div>
       <img src="images/b2.jpg" style="height:300px;width:120%;">
@@ -68,7 +68,7 @@
 
  <a href="product1.html" style="text-decoration:none;color:grey;">
   <div class="thumbnail" style="width:395px; margin-top:-10px;">
-      <p> <img src="http://lorempixel.com/200/300/" class="img-circle"style="width:30px;height:30px; float:left;"><b style="float:left;margin-top:3px; "> &nbsp;&nbsp;Jason castro</b><span class="glyphicon glyphicon-time" style="color:grey;float:right;margin-top:5px;" aria-hidden="true">3h &nbsp;</span>
+      <p> <img src="http://lorempixel.com/200/300/" class="img-circle"style="width:30px;height:30px; float:left;"><p style="float:left;margin-top:3px; "> &nbsp;&nbsp;Castro</b><span  style="color:grey;float:right;margin-top:5px; margin-left:205px;" aria-hidden="true"><p>3h</p> &nbsp;</span>
       <div>&nbsp;</div>
       <div>&nbsp;</div>
       <img src="images/b3.jpg" style="height:300px;width:120%;">
@@ -85,7 +85,7 @@
 
  <a href="product1.html" style="text-decoration:none;color:grey;">
   <div class="thumbnail" style="width:395px; margin-top:-10px;">
-       <p> <img src="http://lorempixel.com/200/400/" class="img-circle"style="width:30px;height:30px; float:left;"><b style="float:left;margin-top:3px; "> &nbsp;&nbsp;Carlo go</b><span class="glyphicon glyphicon-time" style="color:grey;float:right;margin-top:5px;" aria-hidden="true">3h &nbsp;</span>
+       <p> <img src="http://lorempixel.com/200/400/" class="img-circle"style="width:30px;height:30px; float:left;"><p style="float:left;margin-top:3px; "> &nbsp;&nbsp;Gian Javelona</b><span  style="color:grey;float:right;margin-top:5px; margin-left:205px;" aria-hidden="true"><p>3h</p> &nbsp;</span>
       <div>&nbsp;</div>
       <div>&nbsp;</div>
       <img src="images/b4.jpg" style="height:300px;width:120%;">
@@ -102,7 +102,7 @@
 
  <a href="product1.html" style="text-decoration:none;color:grey;">
   <div class="thumbnail" style="width:395px; margin-top:-10px;">
-     <p> <img src="http://lorempixel.com/100/100/" class="img-circle"style="width:30px;height:30px; float:left;"><b style="float:left;margin-top:3px; "> &nbsp;&nbsp;Justin Isiderio</b><span class="glyphicon glyphicon-time" style="color:grey;float:right;margin-top:5px;" aria-hidden="true">3h &nbsp;</span>
+     <p> <img src="http://lorempixel.com/100/100/" class="img-circle"style="width:30px;height:30px; float:left;"><p style="float:left;margin-top:3px; "> &nbsp;&nbsp;Isiderio</b><span  style="color:grey;float:right;margin-top:5px; margin-left:205px;" aria-hidden="true"><p>3h</p> &nbsp;</span>
       <div>&nbsp;</div>
       <div>&nbsp;</div>
       <img src="images/b5.jpg" style="height:300px;width:120%;">
@@ -119,7 +119,7 @@
 
  <a href="product1.html" style="text-decoration:none;color:grey;">
   <div class="thumbnail" style="width:395px; margin-top:-10px;">
-      <p> <img src="http://lorempixel.com/300/100/" class="img-circle"style="width:30px;height:30px; float:left;"><b style="float:left;margin-top:3px; "> &nbsp;&nbsp;Mark Zuckerberg</b><span class="glyphicon glyphicon-time" style="color:grey;float:right;margin-top:5px;" aria-hidden="true">3h &nbsp;</span>
+      <p> <img src="http://lorempixel.com/300/100/" class="img-circle"style="width:30px;height:30px; float:left;"><p style="float:left;margin-top:3px; "> &nbsp;&nbsp;Zuckerberg</b><span  style="color:grey;float:right;margin-top:5px; margin-left:205px;" aria-hidden="true"><p>3h</p> &nbsp;</span>
       <div>&nbsp;</div>
       <div>&nbsp;</div>
       <img src="images/b6.jpg" style="height:300px;width:120%;">
@@ -135,7 +135,7 @@
 
  <a href="product1.html" style="text-decoration:none;color:grey;">
   <div class="thumbnail" style="width:395px; margin-top:-10px;">
-     <p> <img src="http://lorempixel.com/400/100/" class="img-circle"style="width:30px;height:30px; float:left;"><b style="float:left;margin-top:3px; "> &nbsp;&nbsp;Alex castro</b><span class="glyphicon glyphicon-time" style="color:grey;float:right;margin-top:5px;" aria-hidden="true">3h &nbsp;</span>
+     <p> <img src="http://lorempixel.com/400/100/" class="img-circle"style="width:30px;height:30px; float:left;"><p style="float:left;margin-top:3px; "> &nbsp;&nbsp;Alex Castro</b><span  style="color:grey;float:right;margin-top:5px; margin-left:205px;" aria-hidden="true"><p>3h</p> &nbsp;</span>
       <div>&nbsp;</div>
       <div>&nbsp;</div>
       <img src="images/b7.jpg" style="height:300px;width:120%;">
@@ -149,7 +149,7 @@
 
   <a href="product1.html" style="text-decoration:none;color:grey;">
   <div class="thumbnail" style="width:395px; margin-top:-10px;">
-       <p> <img src="http://lorempixel.com/500/100/" class="img-circle"style="width:30px;height:30px; float:left;"><b style="float:left;margin-top:3px; "> &nbsp;&nbsp;Lester Carlo</b><span class="glyphicon glyphicon-time" style="color:grey;float:right;margin-top:5px;" aria-hidden="true">3h &nbsp;</span>
+       <p> <img src="http://lorempixel.com/500/100/" class="img-circle"style="width:30px;height:30px; float:left;"><p style="float:left;margin-top:3px; "> &nbsp;&nbsp;Roniel Soriano</b><span  style="color:grey;float:right;margin-top:5px; margin-left:205px;" aria-hidden="true"><p>3h</p> &nbsp;</span>
       <div>&nbsp;</div>
       <div>&nbsp;</div>
       <img src="images/b8.jpg" style="height:300px;width:120%;">
@@ -164,7 +164,7 @@
 
    <a href="product1.html" style="text-decoration:none;color:grey;">
   <div class="thumbnail" style="width:395px; margin-top:-10px;">
-      <p> <img src="http://lorempixel.com/100/100/" class="img-circle"style="width:30px;height:30px; float:left;"><b style="float:left;margin-top:3px; "> &nbsp;&nbsp;Denzel santos</b><span class="glyphicon glyphicon-time" style="color:grey;float:right;margin-top:5px;" aria-hidden="true">3h &nbsp;</span>
+      <p> <img src="http://lorempixel.com/100/100/" class="img-circle"style="width:30px;height:30px; float:left;"><p style="float:left;margin-top:3px; "> &nbsp;&nbsp;Denzel Santos</b><span  style="color:grey;float:right;margin-top:5px; margin-left:205px;" aria-hidden="true"><p>3h</p> &nbsp;</span>
       <div>&nbsp;</div>
       <div>&nbsp;</div>
       <img src="images/b9.jpg" style="height:300px;width:120%;">
