--- a/search.html
+++ b/search.html
@@ -31,11 +31,11 @@
 <!-- 3 key -->
 <div style="margin-top:20px;">
  <form class="form-inline">
-  <div class="form-group">
-    <label class="sr-only" for="exampleInputAmount">Amount (in dollars)</label>
-    <div class="input-group">
-      <div class="input-group-addon"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></div>
-      <input type="text" class="form-control" id="exampleInputAmount" placeholder="What are you looking for today">
+  <div class="form-group" >
+    
+    <div class="input-group" style="width:470px; margin-left:10px;">
+      <div class="input-group-addon"style="height:50px;"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></div>
+      <input type="text" class="form-control" style="height:50px;"id="exampleInputAmount" placeholder="What are you looking for today">
       
     </div>
   </div>
