--- a/search.html
+++ b/search.html
@@ -33,7 +33,7 @@
  <form class="form-inline">
   <div class="form-group" >
     
-    <div class="input-group" style="width:470px; margin-left:10px;">
+    <div class="input-group" style=" margin-left:10px;">
       <div class="input-group-addon"style="height:50px;"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></div>
       <input type="text" class="form-control" style="height:50px;"id="exampleInputAmount" placeholder="What are you looking for today">
       
