--- a/search.html
+++ b/search.html
@@ -42,7 +42,44 @@
   
 </form>
 
+   <h5 style="margin-left:10px;">Recent Searches</h3>
+<a href="product1.html" style="text-decoration:none;color:grey;">
+  <div class="thumbnail" style="width:395px; margin-top:10px;margin-left:10px;">
+          <h4>Ladies Clothes</h3>
+      </div>
+  </div>
 
+  <a href="product1.html" style="text-decoration:none;color:grey;">
+  <div class="thumbnail" style="width:395px; margin-top:5px;margin-left:10px;">
+          <h4>Shoes</h3>
+      </div>
+  </div>
+
+  <a href="product1.html" style="text-decoration:none;color:grey;">
+  <div class="thumbnail" style="width:395px; margin-top:5px;margin-left:10px;">
+          <h4>Bags</h3>
+      </div>
+  </div>
+
+
+  <h5 style="margin-left:10px; color:black">Trending</h3>
+<a href="product1.html" style="text-decoration:none;color:grey;">
+  <div class="thumbnail" style="width:395px; margin-top:10px;margin-left:10px;">
+          <h4>#Cupcakes</h3>
+      </div>
+  </div>
+
+  <a href="product1.html" style="text-decoration:none;color:grey;">
+  <div class="thumbnail" style="width:395px; margin-top:5px;margin-left:10px;">
+          <h4>#Jackets</h3>
+      </div>
+  </div>
+
+  <a href="product1.html" style="text-decoration:none;color:grey;">
+  <div class="thumbnail" style="width:395px; margin-top:5px;margin-left:10px;">
+          <h4>#Toys</h3>
+      </div>
+  </div>
 
 
 
