--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
 
 <!-- 3 key -->
 <div style="bgcolor:white;">
-  <a href="womens.html"><img src="images/forher.jpg" style=" margin-top:21px; height:120px;" class="img-responsive"></a>
-   <a href="womens.html"><img src="images/forhim.jpg" style=" margin-top:5px;height:120px; " class="img-responsive"></a>
-    <a href="womens.html"><img src="images/food.jpg" style=" margin-top:5px; height:120px;" class="img-responsive"></a>
-     <a href="womens.html"><img src="images/baby.jpg" style=" margin-top:5px;height:120px; " class="img-responsive"></a>
-      <a href="womens.html"><img src="images/ofw.jpg" style=" margin-top:5px;height:120px; " class="img-responsive"></a>
+  <a href="productfeed.html"><img src="images/forher.jpg" style=" margin-top:21px; height:120px;" class="img-responsive"></a>
+   <a href="productfeed.html"><img src="images/forhim.jpg" style=" margin-top:5px;height:120px; " class="img-responsive"></a>
+    <a href="productfeed.html"><img src="images/food.jpg" style=" margin-top:5px; height:120px;" class="img-responsive"></a>
+     <a href="productfeed.html"><img src="images/baby.jpg" style=" margin-top:5px;height:120px; " class="img-responsive"></a>
+      <a href="productfeed.html"><img src="images/ofw.jpg" style=" margin-top:5px;height:120px; " class="img-responsive"></a>
    
 
 
