--- a/productfeed.html
+++ b/productfeed.html
@@ -33,7 +33,7 @@
  <center>
  <a href="product1.html" style="text-decoration:none;color:grey;">
   <div class="thumbnail" style="width:395px;">
-    <p> <img src="http://lorempixel.com/200/200/" class="img-circle"style="width:30px;height:30px; float:left;"><p style="float:left;margin-top:3px;color:orange; "> &nbsp;&nbsp;@Mark Concio</b></p><p style="font-size:12px;float:left;margin-top:25px;margin-left:-88px;">3h ago</p></span>
+    <p> <img src="images/dp1.jpg" class="img-circle"style="width:30px;height:30px; float:left;"><p style="float:left;margin-top:3px;color:orange; "> &nbsp;&nbsp;@Mark Concio</b></p><p style="font-size:12px;float:left;margin-top:25px;margin-left:-88px;">3h ago</p></span>
      <img src="images/b1.jpg" style="height:300px;width:100%;"><br>
       <img src="images/likeicon.png" style="height:30px; float:left;"><img src="images/commenticon.png" style="height:30px; float:left; margin-left:10px;"><p style="font-size:15px;margin-left:240px;margin-top:5px;">PHP 7750</b>
          &nbsp; &nbsp; 
@@ -41,7 +41,7 @@
        <hr style="margin-top:-1px;">
         <img src="images/likeicon.png" style="height:20px; margin-left:3px;"><p style="margin-left:-293px; font-size:12px; margin-top:-15px;">22likes</p>
         <p style="float:left;color:orange; margin-top:1px;margin-left:-10px; "> &nbsp;&nbsp;@Mark Concio</b></p>
-        <p style="margin-top:50px; text-align:left;">
+        <p style="margin-top:45px; text-align:left;">
           For Sale:
           Processor: NVIDIA® Tegra® 4 T40S (1.8 GHz, 1MB, 4-core)
 Operating System: Android™ 4.2
@@ -66,7 +66,7 @@ Weight:10.1 lbs
 
 <a href="product1.html" style="text-decoration:none;color:grey;">
   <div class="thumbnail" style="width:395px;">
-    <p> <img src="http://lorempixel.com/200/200/" class="img-circle"style="width:30px;height:30px; float:left;"><p style="float:left;margin-top:3px;color:orange; "> &nbsp;&nbsp;@Mark Concio</b></p><p style="font-size:12px;float:left;margin-top:25px;margin-left:-88px;">3h ago</p></span>
+    <p> <img src="images/dp3.jpg" class="img-circle"style="width:30px;height:30px; float:left;"><p style="float:left;margin-top:3px;color:orange; "> &nbsp;&nbsp;@Mark Concio</b></p><p style="font-size:12px;float:left;margin-top:25px;margin-left:-88px;">3h ago</p></span>
      <img src="images/b2.jpg" style="height:300px;width:100%;"><br>
       <img src="images/likeicon.png" style="height:30px; float:left;"><img src="images/commenticon.png" style="height:30px; float:left; margin-left:10px;"><p style="font-size:15px;margin-left:240px;margin-top:5px;">PHP 7750</b>
          &nbsp; &nbsp; 
