--- a/productfeed.html
+++ b/productfeed.html
@@ -34,11 +34,19 @@
  <a href="product1.html" style="text-decoration:none;color:grey;">
   <div class="thumbnail" style="width:395px;">
     <p> <img src="images/dp1.jpg" class="img-circle"style="width:30px;height:30px; float:left;"><p style="float:left;margin-top:3px;color:orange; "> &nbsp;&nbsp;@Gian Javelona</b></p><p style="font-size:12px;float:left;margin-top:25px;margin-left:-88px;">3h ago</p></span>
-     <img src="images/b1.jpg" style="height:300px;width:100%;"><br>
-      <img src="images/likeicon.png" style="height:30px; float:left;"><img src="images/commenticon.png" style="height:30px; float:left; margin-left:10px;"><p style="font-size:15px;margin-left:240px;margin-top:5px;">PHP 1750</b>
+    <p style="font-size:15px;margin-left:240px;margin-top:20px;">PHP 1750</b>
          &nbsp; &nbsp; 
         <img src="images/map.png" class="img-circle"style="width:25px;height:25px; ">QC</p></a>
-       <hr style="margin-top:-1px;">
+
+     <img src="images/b1.jpg" style="height:300px;width:100%;"><br>
+      <img src="images/likeicon.png" style="height:30px; float:left;"><img src="images/commenticon.png" style="height:30px; float:left; margin-left:10px;">
+
+      <a href="sms:09189247810" style="width:70px;margin-left:80px;"class="btn widget uib_w_9 d-margins btn-primary " data-uib="twitter%20bootstrap/button" data-ver="1" ><b>SMS</b></a>
+
+     <a href="chat/index.html" style="width:70px;"class="btn widget uib_w_9 d-margins btn-success  " data-uib="twitter%20bootstrap/button" data-ver="1"><b>Chat</b></a>
+
+     <a href="tel:09189247810" style="width:70px;"class="btn widget uib_w_9 d-margins btn-warning " data-uib="twitter%20bootstrap/button" data-ver="1"><b>Call</b></a>
+       <hr style="margin-top:41px;">
         <img src="images/likeicon.png" style="height:20px; margin-left:3px;"><p style="margin-left:-293px; font-size:12px; margin-top:-15px;">22likes</p>
         <p style="float:left;color:orange; margin-top:1px;margin-left:-10px; "> &nbsp;&nbsp;@Gian Javelona</b></p>
         <p style="margin-top:45px; text-align:left;">
