--- a/product1.html
+++ b/product1.html
@@ -100,7 +100,7 @@ I will give BIG Discount if you avail 10sets.
 We accept Shipping!
 
 =SPECS=
-Brand:DELL<br>
+Brand:DELLs<br>
 Model:Optiplex 745<br>
 * Intel CORE 2 Quad 2.4ghz<br>
 * 2gb Memory<br>
