--- a/productfeed.html
+++ b/productfeed.html
@@ -31,7 +31,7 @@
 <!-- 3 key -->
 <div style="margin-top:20px;">
  <center>
- <a href="product1.html" style="text-decoration:none;color:grey;">
+ <a href="https://ecomgian.azurewebsites.net/product1.html" style="text-decoration:none;color:grey;">
   <div class="thumbnail" style="width:395px;">
     <p> <img src="images/dp1.jpg" class="img-circle"style="width:30px;height:30px; float:left;"><p style="float:left;margin-top:3px;color:orange; "> &nbsp;&nbsp;@Gian Javelona</b></p><p style="font-size:12px;float:left;margin-top:25px;margin-left:-88px;">3h ago</p></span>
      <img src="images/b1.jpg" style="height:300px;width:100%;"><br>
