--- a/productfeed.html
+++ b/productfeed.html
@@ -32,7 +32,7 @@
 <div style="margin-top:20px;">
  <center>
  <a href="product.html" style="text-decoration:none;color:grey;">
-  <div class="thumbnail" style="width:395px;">
+  <div class="thumbnail" >
     <p> <img src="images/dp1.jpg" class="img-circle"style="width:30px;height:30px; float:left;"><p style="float:left;margin-top:3px;color:orange; "> &nbsp;&nbsp;@Gian Javelona</b></p><p style="font-size:12px;float:left;margin-top:25px;margin-left:-88px;">3h ago</p></span>
      <img src="images/b1.jpg" style="height:300px;width:100%;"><br>
       <img src="images/likeicon.png" style="height:30px; float:left;"><img src="images/commenticon.png" style="height:30px; float:left; margin-left:10px;"><p style="font-size:15px;margin-left:240px;margin-top:5px;">PHP 1750</b>
